[package]
name = "bevy-paperdoll"
version = "0.5.0"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "Bevy plugin for 2D paper doll"
edition = "2021"
homepage = "https://github.com/fralonra/bevy-paperdoll"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fralonra/bevy-paperdoll"
keywords = ["bevy", "gamedev", "paperdoll"]
categories = ["game-development"]
exclude = [".gitignore", ".github/*", "assets/*", "doc/*", "examples/*"]

[dependencies]
anyhow = "1.0"
bevy = { version = "0.15", default-features = false, features = [
  "basis-universal",
  "bevy_asset",
  "bevy_render",
] }
paperdoll-tar = "0.1"
thiserror = "1.0"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_state",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "x11",
] }
